// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputField.vue renders OXD InputField 1`] = `
<div class="oxd-input-group oxd-input-field-bottom-space">
  <div class="oxd-input-group__label-wrapper">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div><input class="oxd-input oxd-input--active"></div>
  <!--v-if-->
</div>
`;

exports[`InputField.vue renders OXD InputField type \`file\` 1`] = `
<div class="oxd-input-group oxd-input-field-bottom-space">
  <div class="oxd-input-group__label-wrapper">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div><input type="file" class="oxd-file-input">
    <div class="oxd-input oxd-file-div oxd-input--active">
      <!--v-if-->
      <div class="oxd-file-input-div"></div>
    </div>
  </div>
  <!--v-if-->
</div>
`;

exports[`InputField.vue renders OXD InputField type \`file\` with button 1`] = `
<div class="oxd-input-group oxd-input-field-bottom-space">
  <div class="oxd-input-group__label-wrapper">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div><input type="file" class="oxd-file-input">
    <div class="oxd-input oxd-file-div oxd-input--active">
      <div class="oxd-file-button">Browse</div>
      <div class="oxd-file-input-div"></div>
    </div>
  </div>
  <!--v-if-->
</div>
`;

exports[`InputField.vue renders OXD InputField type \`input\` 1`] = `
<div class="oxd-input-group oxd-input-field-bottom-space">
  <div class="oxd-input-group__label-wrapper">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div><input class="oxd-input oxd-input--active"></div>
  <!--v-if-->
</div>
`;

exports[`InputField.vue renders OXD InputField type \`textarea\` 1`] = `
<div class="oxd-input-group oxd-input-field-bottom-space">
  <div class="oxd-input-group__label-wrapper">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div><textarea class="oxd-textarea oxd-textarea--active oxd-textarea--resize-vertical"></textarea></div>
  <!--v-if-->
</div>
`;
